# browser1_el

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  package-lock.json  package.json  setup.sh
crates/browser-el-core/: Cargo.toml
crates/browser-el-core/src/: lib.rs  settings.rs  sidebar.rs
crates/browser-el-ipc/: Cargo.toml
crates/browser-el-ipc/src/: commands.rs  state.rs
crates/browser-el-native/: Cargo.toml
crates/browser-el-native/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/browser-el-storage/: Cargo.toml
crates/browser-el-storage/src/: bookmark.rs  lib.rs
crates/zen-core/: Cargo.toml
crates/zen-core/src/: exam_mode.rs  navigation.rs  space_manager.rs  tab_manager.rs
crates/zen-ipc/: Cargo.toml
crates/zen-ipc/src/: commands.rs  lib.rs  state.rs
crates/zen-native/: Cargo.toml
crates/zen-native/src/: extensions.rs
crates/zen-storage/: Cargo.toml
crates/zen-storage/src/: history.rs  migrations.rs
frontend/: index.html  package.json
frontend/src/: main.ts
frontend/styles/: panels.css  toolbar.css  webview.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/main/: main.ts  preload.ts
src/renderer/: bookmarks.ts  extensions.ts  history.ts  index.html  navigation.ts  panels.ts  renderer.ts  settings.ts  sidebar.ts  spaces.ts  splitview.ts  tabs.ts  webview-preload.ts
src/styles/: main.css  panels.css  sidebar.css  toolbar.css  webview.css
