[workspace]
members = ["crates/*", "src-tauri"]
resolver = "2"

[workspace.dependencies]
# Tauri core
tauri = { version = "2.1", features = ["webview"] }
tauri-build = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Concurrency
parking_lot = "0.12"

# URL handling
url = "2"
urlencoding = "2"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
