[package]
name = "zen-browser"
version = "1.0.0"
description = "A world-class browser built with Rust and Tauri"
authors = ["Zen Browser Team"]
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = "2.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

zen-core = { path = "../crates/zen-core" }
zen-ipc = { path = "../crates/zen-ipc" }
zen-storage = { path = "../crates/zen-storage" }
zen-native = { path = "../crates/zen-native" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
