[package]
name = "browser-el"
version = "1.0.0"
description = "A world-class browser built with Rust and Tauri"
authors = ["Browser El Team"]
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = "2.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

browser-el-core = { path = "../crates/browser-el-core" }
browser-el-ipc = { path = "../crates/browser-el-ipc" }
browser-el-storage = { path = "../crates/browser-el-storage" }
browser-el-native = { path = "../crates/browser-el-native" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
