[package]
name = "browser-el-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

browser-el-core = { path = "../browser-el-core" }
