[package]
name = "zen-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }

zen-core = { path = "../zen-core" }
zen-storage = { path = "../zen-storage" }
